--- a/en-contact.html
+++ b/en-contact.html
@@ -385,15 +385,16 @@
 
 
       <div class="topnav">
-        <a href="en.html" class="active">
+        <a href="en-contact.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
             <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
-                      ★</small></a></strong><br>
+              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small
+                      style="color: rgb(44, 44, 44);">▸ Biography
+                    </small></a></strong><br>
               </li>
 
               <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
@@ -439,8 +440,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
-                      Me</strong></small></a><br></li>
+              <li><a href="en-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸ Contact
+                      Me ★</strong></small></a><br></li>
               <hr>
             </div>
           </ul>
