--- a/es-contact.html
+++ b/es-contact.html
@@ -273,7 +273,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_es3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_en3.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -408,14 +411,15 @@
 
 
       <div class="topnav">
-        <a href="es.html" class="active">
+        <a href="es-contact.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xú</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small>▸ Biografía
-                    ★</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biografía
+                  </small></a></strong><br>
             </li>
 
             <li><a href="es-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Avances de la
@@ -460,8 +464,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Deportes</small></a></li>
             </div>
 
-            <li><a href="es-contact.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Contacto</strong></small></a><br>
+            <li><a href="es-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Contacto ★</strong></small></a><br>
             </li>
             <hr>
           </ul>
