--- a/es-research.html
+++ b/es-research.html
@@ -351,14 +351,14 @@
 
 
       <div class="topnav">
-        <a href="es.html" class="active">
+        <a href="es-research.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xú</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small
-                    style="color: rgb(97, 97, 97);">▸ Biografía
+                    style="color: rgb(44, 44, 44);">▸ Biografía
                   </small></a></strong><br>
             </li>
 
