--- a/es-resume.html
+++ b/es-resume.html
@@ -273,7 +273,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_es3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_es5.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 26.3%; left: 59%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -349,14 +352,14 @@
 
 
       <div class="topnav">
-        <a href="es.html" class="active">
+        <a href="es-resume.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xú</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small
-                    style="color: rgb(97, 97, 97);">▸ Biografía
+                    style="color: rgb(44, 44, 44);">▸ Biografía
                   </small></a></strong><br>
             </li>
 
