--- a/fr-contact.html
+++ b/fr-contact.html
@@ -285,7 +285,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_fr3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_fr3.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -419,14 +422,15 @@
 
 
       <div class="topnav">
-        <a href="fr.html" class="active">
+        <a href="fr-contact.html" class="active">
           <h3 class="display-mobile">Dr. Hóng Xú</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="fr.html"><small>▸ Biographie
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="fr.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biographie
+                  </small></a></strong><br>
             </li>
 
             <li><a href="fr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progrès de la
@@ -442,7 +446,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Les titres</small></a></li>
             </div>
 
-            <li><a href="fr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
+            <li><a href="fr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+                    vitæ</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-resume.html#education-mobile"
@@ -472,8 +477,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Des sports</small></a></li>
             </div>
 
-            <li><a href="fr-contact.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Contactez-moi</strong></small></a><br></li>
+            <li><a href="fr-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Contactez-moi ★</strong></small></a><br></li>
             <hr>
           </ul>
         </div>
