--- a/fr.html
+++ b/fr.html
@@ -436,7 +436,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="fr.html"><small>▸ Biographie
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="fr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progrès de la
@@ -452,7 +452,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Les titres</small></a></li>
             </div>
 
-            <li><a href="fr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
+            <li><a href="fr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+                    vitæ</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-resume.html#education-mobile"
