--- a/it-research.html
+++ b/it-research.html
@@ -356,27 +356,28 @@
 
 
       <div class="topnav">
-        <a href="fr.html" class="active">
+        <a href="it-research.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small>▸ Biografia
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biografia
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="it-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progressi della
-                      ricerca</strong></span></small></a></li>
+            <li><a href="it-research.html"><strong><small><span style="color: rgb(253, 93, 7);">▸ Progressi della
+                      ricerca ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="it-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Pubblicazioni</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Pubblicazioni</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Brevetti</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Brevetti</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferenze</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Conferenze</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Ricerca patrimoniale</small></a></li>
+                  style="color: rrgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Ricerca patrimoniale</small></a></li>
             </div>
 
             <li><a href="it-resume.html"><small style="color: rgb(97, 97, 97);">▸
