--- a/it-resume.html
+++ b/it-resume.html
@@ -280,8 +280,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_it3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_it5.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 26.3%; left: 59%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -360,8 +362,9 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small>▸ Biografia
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biografia
+                  </small></a></strong><br>
             </li>
 
             <li><a href="it-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progressi della
@@ -377,17 +380,17 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Ricerca patrimoniale</small></a></li>
             </div>
 
-            <li><a href="it-resume.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Curriculum</strong></small></a></li>
+            <li><a href="it-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Curriculum ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="it-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Istruzione</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Istruzione</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Accademico</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Accademico</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Industriale</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Industriale</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Premi</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Premi</small></a></li>
             </div>
 
             <li><a href="it-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Attività
