--- a/jp-activities.html
+++ b/jp-activities.html
@@ -332,8 +332,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_jp3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_jp6.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 18.3%; left: 68.3%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -416,7 +418,7 @@
 
 
       <div class="topnav">
-        <a href="jp.html" class="active">
+        <a href="jp-activities.html" class="active">
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
               </ruby></small>
@@ -426,7 +428,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
-                    style="color: rgb(97, 97, 97);">▸ 私について
+                    style="color: rgb(44, 44, 44);">▸ 紹介
                   </small></a></strong><br>
             </li>
 
