--- a/jp-research.html
+++ b/jp-research.html
@@ -363,7 +363,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
-                    style="color: rgb(97, 97, 97);">▸ 私について </small></a></strong><br>
+                    style="color: rgb(97, 97, 97);">▸ 紹介 </small></a></strong><br>
             </li>
 
             <li><a href="jp-research.html"><small><strong><span style="color: rgb(253, 93, 7);">▸
