--- a/jp.html
+++ b/jp.html
@@ -429,7 +429,7 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 私について
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 紹介
                     ★</small></a></strong><br>
             </li>
 
