--- a/kr-contact.html
+++ b/kr-contact.html
@@ -280,7 +280,11 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_kr3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_kr3.gif" width="800"
+      style="margin-top: -10px; max-width: 113%;">
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -419,15 +423,16 @@
 
 
       <div class="topnav">
-        <a href="kr.html" class="active">
+        <a href="kr-contact.html" class="active">
           <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>에너지박사</rt>
               </ruby></small></h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small>▸ 저에 대해
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small
+                    style="color: rgb(44, 44, 44);">▸ 저에 대해
+                  </small></a></strong><br>
             </li>
 
             <li><a href="kr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>연구 진행
@@ -474,7 +479,7 @@
 
             </div>
 
-            <li><a href="kr-contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br>
+            <li><a href="kr-contact"><strong><small style="color: rgb(253, 93, 7);">▸ 나에게 연락 ★</strong></small></a><br>
             </li>
             <hr>
           </ul>
