--- a/kr-research.html
+++ b/kr-research.html
@@ -363,28 +363,29 @@
 
 
       <div class="topnav">
-        <a href="kr.html" class="active">
+        <a href="kr-research.html" class="active">
           <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>에너지박사</rt>
               </ruby></small></h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small>▸ 저에 대해
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small
+                    style="color: rgb(44, 44, 44);">▸ 저에 대해
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="kr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>연구 진행
-                      상황</strong></span></small></a></li>
+            <li><a href="kr-research.html"><small><strong><span style="color: rgb(253, 93, 7);">▸ 연구 진행
+                      상황 ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 출판물</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 출판물</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 특허</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 특허</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 회의</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 회의</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 증권 연구</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 증권 연구</small></a></li>
             </div>
 
             <li><a href="kr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>이력</strong></small></a></li>
