--- a/ru-contact.html
+++ b/ru-contact.html
@@ -264,7 +264,11 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ru3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ru3.gif" width="800"
+      style="margin-top: -10px; max-width: 113%;">
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -395,14 +399,15 @@
 
 
       <div class="topnav">
-        <a href="ru.html" class="active">
+        <a href="ru-contact.html" class="active">
           <h3 class="display-mobile">Доктор Хун Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small>▸ Обо мне
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Обо мне
+                  </small></a></strong><br>
             </li>
 
             <li><a href="ru-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Научная
@@ -448,8 +453,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Спортивный</small></a></li>
             </div>
 
-            <li><a href="ru-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
-                    мной</strong></small></a><br></li>
+            <li><a href="ru-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸ Связаться со
+                    мной ★</strong></small></a><br></li>
             <hr>
           </ul>
         </div>
