--- a/ru-research.html
+++ b/ru-research.html
@@ -339,27 +339,28 @@
 
 
       <div class="topnav">
-        <a href="ru.html" class="active">
+        <a href="ru-research.html" class="active">
           <h3 class="display-mobile">Доктор Хун Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small>▸ Обо мне
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Обо мне
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="ru-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Научная
-                      работа</strong></span></small></a></li>
+            <li><a href="ru-research.html"><strong><small><span style="color: rgb(253, 93, 7);">▸ Научная
+                      работа ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Публикации</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Публикации</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Патенты</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Патенты</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Конференции</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Конференции</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Ценные бумаги</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Ценные бумаги</small></a></li>
             </div>
 
             <li><a href="ru-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Резюме</strong></small></a>
