--- a/ru-resume.html
+++ b/ru-resume.html
@@ -264,8 +264,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ru3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ru5.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 26.3%; left: 59%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -338,14 +340,15 @@
 
 
       <div class="topnav">
-        <a href="ru.html" class="active">
+        <a href="ru-resume.html" class="active">
           <h3 class="display-mobile">Доктор Хун Сюй</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small>▸ Обо мне
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Обо мне
+                  </small></a></strong><br>
             </li>
 
             <li><a href="ru-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Научная
@@ -361,17 +364,17 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Ценные бумаги</small></a></li>
             </div>
 
-            <li><a href="ru-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Резюме</strong></small></a>
+            <li><a href="ru-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸ Резюме ★</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Образование</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Образование</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Академический</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Академический</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Промышленный</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Промышленный</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ru-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Награды</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Награды</small></a></li>
             </div>
 
             <li><a href="ru-activities.html"><small style="color: rgb(97, 97, 97);">▸
