--- a/ru.html
+++ b/ru.html
@@ -415,7 +415,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="ru.html"><small>▸ Обо мне
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="ru-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Научная
