--- a/en-activities.html
+++ b/en-activities.html
@@ -375,7 +375,7 @@
 
 
       <div class="topnav">
-        <a href="en.html" class="active">
+        <a href="en-activities.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
@@ -383,7 +383,7 @@
             <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
               <li><img src="images/logo.png" style="float:right" width="45"><a href="en.html"><small
-                    style="color: rgb(97, 97, 97);">▸ <strong>Biography</strong></small></a><br>
+                    style="color: rgb(44, 44, 44);">▸ <strong>Biography</strong></small></a><br>
               </li>
 
               <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
@@ -429,7 +429,7 @@
                     href="en-activities.html#sports">&nbsp;&nbsp;&nbsp;<small>• Sports</small></a></li>
               </div>
 
-              <li><a href="en-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Contact
+              <li><a href="en-contact.html"><small style="color: rgb(44, 44, 44);">▸ <strong>Contact
                       Me</strong></small></a><br></li>
               <hr>
             </div>
