--- a/en-research.html
+++ b/en-research.html
@@ -325,7 +325,7 @@
 
 
       <div class="topnav">
-        <a href="en.html" class="active">
+        <a href="en-research.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
