--- a/es-activities.html
+++ b/es-activities.html
@@ -320,7 +320,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_es3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_es6.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 18.3%; left: 68.3%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -397,7 +400,7 @@
 
 
       <div class="topnav">
-        <a href="es.html" class="active">
+        <a href="es-activities.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xú</h3>
         </a>
         <div id="myLinks">
