--- a/fr-research.html
+++ b/fr-research.html
@@ -364,30 +364,32 @@
 
 
       <div class="topnav">
-        <a href="fr.html" class="active">
+        <a href="fr-research.html" class="active">
           <h3 class="display-mobile">Dr. Hóng Xú</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="fr.html"><small>▸ Biographie
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="fr.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biographie
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="fr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progrès de la
-                      recherche</strong></span></small></a></li>
+            <li><a href="fr-research.html"><strong><small><span style="color: rgb(253, 93, 7);">▸ Progrès de la
+                      recherche ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Brevets</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Brevets</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conférences</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Conférences</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Les titres</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Les titres</small></a></li>
             </div>
 
-            <li><a href="fr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a>
+            <li><a href="fr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Curriculum
+                    vitæ</strong></small></a>
             </li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="fr-resume.html#education-mobile"
