--- a/it-activities.html
+++ b/it-activities.html
@@ -280,8 +280,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_it3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_it6.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 18.3%; left: 68.3%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -356,14 +358,15 @@
 
 
       <div class="topnav">
-        <a href="fr.html" class="active">
+        <a href="it-activities.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small>▸ Biografia
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biografia
+                  </small></a></strong><br>
             </li>
 
             <li><a href="it-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progressi della
@@ -392,21 +395,21 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Premi</small></a></li>
             </div>
 
-            <li><a href="it-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Attività
-                    extracurricolari</strong></small></a></li>
+            <li><a href="it-activities.html"><strong><small style="color: rgb(253, 93, 7);">▸ Attività
+                    extracurricolari ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferenziere</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Conferenziere</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#writing"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Scrittura</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Scrittura</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#visiting"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Visitando</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Visitando</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#travel"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Viaggiando</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Viaggiando</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#photography"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografia</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Fotografia</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="it-activities.html#sports"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sport</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Sport</small></a></li>
 
             </div>
 
