--- a/it-contact.html
+++ b/it-contact.html
@@ -280,7 +280,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_it3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_it3.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -413,14 +416,15 @@
 
 
       <div class="topnav">
-        <a href="fr.html" class="active">
+        <a href="it-contact.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xu</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small>▸ Biografia
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Biografia
+                  </small></a></strong><br>
             </li>
 
             <li><a href="it-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progressi della
@@ -467,8 +471,8 @@
 
             </div>
 
-            <li><a href="it-contact.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Contattami</strong></small></a><br>
+            <li><a href="it-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Contattami ★</strong></small></a><br>
             </li>
             <hr>
           </ul>
