--- a/it.html
+++ b/it.html
@@ -428,8 +428,8 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small>▸ Biografia
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="it.html"><small>▸ Biografia ★
+                  </small></a></strong><br>
             </li>
 
             <li><a href="it-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Progressi della
