--- a/jp-contact.html
+++ b/jp-contact.html
@@ -273,7 +273,7 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_jp3.png" width="800"
+    <img class="display-mobile" src="images/banner_mobile_jp3.gif" width="800"
       style="margin-top: -10px; max-width: 113%;">
     <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
   </div>
@@ -414,7 +414,7 @@
 
 
       <div class="topnav">
-        <a href="jp.html" class="active">
+        <a href="jp-contact.html" class="active">
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
               </ruby></small>
@@ -423,8 +423,9 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small>▸ 私について
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
+                    style="color: rgb(44, 44, 44);">▸ 紹介
+                  </small></a></strong><br>
             </li>
 
             <li><a href="jp-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -469,8 +470,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• スポーツ</small></a></li>
             </div>
 
-            <li><a href="jp-contact.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>私に連絡して</strong></small></a><br></li>
+            <li><a href="jp-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    私に連絡して ★</strong></small></a><br></li>
             <hr>
           </ul>
         </div>
