--- a/jp-resume.html
+++ b/jp-resume.html
@@ -284,8 +284,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_jp3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_jp5.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 26.3%; left: 59%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -375,7 +377,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="jp.html"><small
-                    style="color: rgb(97, 97, 97);">▸ 私について
+                    style="color: rgb(97, 97, 97);">▸ 紹介
                   </small></a></strong><br>
             </li>
 
