--- a/kr-resume.html
+++ b/kr-resume.html
@@ -295,8 +295,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_kr3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_kr5.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 26.3%; left: 59%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -379,15 +381,16 @@
 
 
       <div class="topnav">
-        <a href="kr.html" class="active">
+        <a href="kr-resume.html" class="active">
           <h3 class="display-mobile"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>博 士<rt>에너지박사</rt>
               </ruby></small></h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small>▸ 저에 대해
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small
+                    style="color: rgb(44, 44, 44);">▸ 저에 대해
+                  </small></a></strong><br>
             </li>
 
             <li><a href="kr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>연구 진행
@@ -403,16 +406,16 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 증권 연구</small></a></li>
             </div>
 
-            <li><a href="kr-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>이력</strong></small></a></li>
+            <li><a href="kr-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸ 이력 ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 학력</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 학력</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 학술 경험</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 학술 경험</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 산업 경험</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 산업 경험</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="kr-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 수상</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• 수상</small></a></li>
             </div>
 
             <li><a href="kr-activities.html"><small style="color: rgb(97, 97, 97);">▸ <strong>활동</strong></small></a>
