--- a/kr.html
+++ b/kr.html
@@ -281,9 +281,11 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_kr3.gif" style="margin-top: -10px; max-width: 113%;" />
+    <img class="display-mobile" src="images/banner_mobile_kr3.gif" width="800"
+      style="margin-top: -10px; max-width: 113%;">
     <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
   </div>
+
 
 
   <div class="container">
@@ -439,7 +441,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="kr.html"><small>▸ 저에 대해
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="kr-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>연구 진행
