--- a/en.html
+++ b/en.html
@@ -577,7 +577,7 @@
         </span>
       </p>
 
-      <!-- <hr class="display-mobile" style="width:113%">
+      <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section hidden-mobile" id="Carbon-Neutral">
@@ -595,7 +595,7 @@
       </div>
 
       <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
-        <h3 class="display-mobile" style="display:inline-block">可持续发展目标 2030</h3>
+        <h3 class="display-mobile" style="display:inline-block">Sustainable Development Goals 2030</h3>
 
       </div>
 
@@ -606,50 +606,50 @@
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg7_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg7_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg7_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg8_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg8_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg8_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg8_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg9_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg9_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg9_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg11_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg11_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg11_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg13_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg13_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg13_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg14_en.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg14_en_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg14_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg14_en_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
@@ -668,7 +668,7 @@
           <span class="dot" onclick="currentSlide(7)"></span>
         </div>
 
-      </div> -->
+      </div>
 
 
       <hr class="display-mobile" style="width:113%">
