--- a/es.html
+++ b/es.html
@@ -589,6 +589,100 @@
       </p>
 
 
+      <hr class="display-mobile" style="width:113%">
+      <hr class="hidden-mobile">
+
+      <div class="doc-section hidden-mobile" id="Carbon-Neutral">
+        <h3 class="hidden-mobile" style="display:inline-block">Objetivos de Desarrollo Sostenible 2030</h3>
+        <div style="float: right">
+          <h3>
+            <a class="hidden-mobile" id="weather" target="_blank"
+              href="https://www.booked.net/weather/beijing-18391"><img
+                src="https://w.bookcdn.com/weather/picture/5_18391_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
+                width="100px" alt="booked.net" style="margin-left: 80px; margin-top: -10px;" /></a>
+
+          </h3>
+        </div>
+
+      </div>
+
+      <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
+        <h3 class="display-mobile" style="display:inline-block">ODS 2030 de la ONU</h3>
+
+      </div>
+
+      <div class="doc-section" id="sdgs">
+
+
+        <div class="slideshow-container">
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg7_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg7_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg8_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg8_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg9_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg9_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg11_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg11_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg13_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg13_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img class="hidden-mobile" src="images/sdg/web/slider_sdg14_en.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/mobi/slider_sdg14_en_mobi.webp" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <a class="prev" onclick="plusSlides(-1)">❮</a>
+          <a class="next" onclick="plusSlides(1)">❯</a>
+
+        </div>
+
+        <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+          <span class="dot" onclick="currentSlide(5)"></span>
+          <span class="dot" onclick="currentSlide(6)"></span>
+          <span class="dot" onclick="currentSlide(7)"></span>
+        </div>
+
+      </div>
+
+
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
