--- a/fr.html
+++ b/fr.html
@@ -620,7 +620,7 @@
       </div>
 
       <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
-        <h3 class="display-mobile" style="display:inline-block">ODD 2030 de l’ONU</h3>
+        <h3 class="display-mobile" style="display:inline-block">Objectifs de développement durable 2030</h3>
 
       </div>
 
