--- a/es.html
+++ b/es.html
@@ -607,7 +607,7 @@
       </div>
 
       <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
-        <h3 class="display-mobile" style="display:inline-block">ODS 2030 de la ONU</h3>
+        <h3 class="display-mobile" style="display:inline-block">Objetivos de Desarrollo Sostenible 2030</h3>
 
       </div>
 
