--- a/ar.html
+++ b/ar.html
@@ -612,50 +612,50 @@
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg7_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg7_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg7_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg8_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg8_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg8_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg8_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg9_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg9_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg9_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg11_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg11_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg11_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg13_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg13_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg13_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg14_ar.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg14_ar_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg14_ar.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg14_ar_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
