--- a/kr-research.html
+++ b/kr-research.html
@@ -435,7 +435,8 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 안녕하세요! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 연구 진행
+          상황 </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
@@ -460,7 +461,7 @@
       </p>
 
       <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile">연구 진행</h3>
+      <h3 class="display-mobile">연구 진행 <small><small><small> 「국경 없는 과학」</small></small> </small></h3>
 
       <p align="justify">
         학계에서 산업계까지, 그는 <strong style="color: rgb(253, 93, 7);">깨끗하고 효율적인 에너지</strong>와 <strong
