--- a/ru-contact.html
+++ b/ru-contact.html
@@ -471,7 +471,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Привет! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Связаться со мной </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
