--- a/jp-contact.html
+++ b/jp-contact.html
@@ -488,7 +488,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ こんにちは！</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 私に連絡して</text>
         <span style="float:right; font-family:verdana">
           <select id="languages" name="languages" style="width: 90px; color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
