--- a/jp-research.html
+++ b/jp-research.html
@@ -426,7 +426,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ こんにちは！</text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 研究進捗</text>
         <span style="float:right; font-family:verdana">
           <select id="languages" name="languages" style="width: 90px; color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
@@ -445,7 +445,7 @@
       </p>
       <div>
         <hr class="display-mobile" style="width:113%">
-        <h3 class="display-mobile">研究分野</h3>
+        <h3 class="display-mobile">研究分野 <small><small><small>「科学に国境はない」</small></small></small></h3>
         <p align="justify">
           学術界から産業界まで、<strong style="color: rgb(253, 93, 7);">クリーンで効率的なエネルギー</strong>と<strong
             style="color: rgb(253, 93, 7);">低炭素でインテリジェントな交通</strong>分野に注力し、分野横断的な<strong>研究関心</strong>を含む：
