--- a/kr-resume.html
+++ b/kr-resume.html
@@ -453,7 +453,7 @@
       </div>
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 안녕하세요! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ 이력 </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
