--- a/ru-activities.html
+++ b/ru-activities.html
@@ -415,7 +415,7 @@
 
 
         <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-          <text style="color:rgb(237, 118, 7);font-size:15px">➔ Привет! </text>
+          <text style="color:rgb(237, 118, 7);font-size:15px">➔ Занятия и хобби </text>
           <span style="float:right;">
             <span style="float:right;font-family:verdana">
               <select id="languages" name="languages"
