--- a/ru-research.html
+++ b/ru-research.html
@@ -411,7 +411,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Привет! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Научная работа </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
