--- a/cn-research.html
+++ b/cn-research.html
@@ -535,7 +535,7 @@
             </div>
 
             <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-                <text style="color:rgb(237, 118, 7);font-size:15px;">➔ 嗨！你好！ </text>
+                <text style="color:rgb(237, 118, 7);font-size:15px;">➔ 研究进展 </text>
                 <span style="float:right; font-family:verdana">
                     <select id="languages" name="languages"
                         style="width:110px;display:inline-block;color:inherit;margin-bottom:0px;"
