--- a/ru-research.html
+++ b/ru-research.html
@@ -433,7 +433,7 @@
       </p>
 
       <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile">Научные интересы</h3>
+      <h3 class="display-mobile">Научные интересы<small><small><small> 「Наука без границ」</small></small> </small></h3>
 
       <p align="justify">
         От <strong>академических</strong> кругов до <strong>промышленности</strong>, он посвящает себя областям <strong
