--- a/it-research.html
+++ b/it-research.html
@@ -429,7 +429,8 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Buongiorno! Saluti! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Progressi della
+          ricerca </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
@@ -451,7 +452,8 @@
       </p>
 
       <hr class="display-mobile" style="width:113%">
-      <h3 class="display-mobile">Interessi di ricerca</h3>
+      <h3 class="display-mobile">Interessi di ricerca<small><small><small>「Scienza senza confini」</small></small>
+        </small></h3>
 
       <p align="justify">
 
