--- a/it-activities.html
+++ b/it-activities.html
@@ -432,7 +432,8 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Buongiorno! Saluti! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Attività
+          extracurricolari </text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
