--- a/it-resume.html
+++ b/it-resume.html
@@ -429,7 +429,7 @@
 
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
-        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Buongiorno! Saluti! </text>
+        <text style="color:rgb(237, 118, 7);font-size:15px">➔ Curriculum</text>
         <span style="float:right;">
           <span style="float:right;font-family:verdana">
             <select id="languages" name="languages"
